--- a/thinkfic/Thinkfic - Interview.ipynb
+++ b/thinkfic/Thinkfic - Interview.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n- The following sample contains several python commands that show my ability to perform data transformation, data aggregation, and data visualization using python functional programming.\\n\\nTHE DATA\\n---------\\n- The exercise is composed of two csv files that contain dummy marketing data:\\n\\nCustomer Segments Table: contains data about the customers accounts.\\nBilling Status Table : contains data about the billing.\\n\\n\\nEXTERNAL VARIABLES\\n------------------\\nPrice Change in account subscriptions -> 2018-12\\nNew Release with better performance and features -> 2018-12\\n\\n\\nAnalysis:\\n---------\\nEffect of these variables on customers and ROI.\\n\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#SAMPLE PYTHON CODE\n",
     "'''\n",
@@ -33,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +157,7 @@
        "4  Marketing Segment 2          AX#57000  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +261,7 @@
        "4                             NaN      $189.00   "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -515,7 +526,7 @@
        "[1014 rows x 10 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,74 +534,6 @@
    "source": [
     "#JOIN TABLE ( TOP FIVE LINES )\n",
     "dfjoin"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Customer ID                         int64\n",
-       "Free Account Created Date          object\n",
-       "Last Seen                          object\n",
-       "Session Count                       int64\n",
-       "Segment                            object\n",
-       "Billing Account #                  object\n",
-       "Account Status                     object\n",
-       "Upgraded Account Created Date      object\n",
-       "Upgraded Account Cancelled Date    object\n",
-       "Total Charges                      object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#JOIN TABLE - METADATA ( SCHEEMA AND DATATYPES)\n",
-    "dfjoin.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       145.60\n",
-       "1       728.00\n",
-       "2       277.20\n",
-       "3       292.83\n",
-       "4       462.00\n",
-       "         ...  \n",
-       "1009     21.20\n",
-       "1010      6.83\n",
-       "1011      4.73\n",
-       "1012      0.00\n",
-       "1013      0.00\n",
-       "Name: Total Charges, Length: 1014, dtype: float64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "CLEANING DATA .....\n",
-    "'''\n",
-    "#CONVERT CURRENCIES INTO FLOATS (remove [$,-\\s])\n",
-    "dfjoin['Total Charges'] = dfjoin['Total Charges'].map(lambda x: x.lstrip('$ ').rstrip('$ ')) #strip ['\\s','$']\n",
-    "dfjoin['Total Charges'] = dfjoin['Total Charges'].apply(lambda x: x.replace(',','').replace('-','0')).astype('float')\n",
-    "dfjoin['Total Charges']"
    ]
   },
   {
@@ -621,6 +564,75 @@
     }
    ],
    "source": [
+    "#JOIN TABLE - METADATA ( SCHEEMA AND DATATYPES)\n",
+    "dfjoin.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       145.60\n",
+       "1       728.00\n",
+       "2       277.20\n",
+       "3       292.83\n",
+       "4       462.00\n",
+       "         ...  \n",
+       "1009     21.20\n",
+       "1010      6.83\n",
+       "1011      4.73\n",
+       "1012      0.00\n",
+       "1013      0.00\n",
+       "Name: Total Charges, Length: 1014, dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "CLEANING DATA .....\n",
+    "'''\n",
+    "#CONVERT CURRENCIES INTO FLOATS (remove [$,-\\s])\n",
+    "dfjoin['Total Charges'] = dfjoin['Total Charges'].map(lambda x: x.lstrip('$ ').rstrip('$ ')) #strip ['\\s','$']\n",
+    "dfjoin['Total Charges'] = dfjoin['Total Charges'].apply(lambda x: x.replace(',','').replace('-','0')).astype('float')\n",
+    "dfjoin['Total Charges']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Customer ID                          int64\n",
+       "Free Account Created Date           object\n",
+       "Last Seen                           object\n",
+       "Session Count                        int64\n",
+       "Segment                             object\n",
+       "Billing Account #                   object\n",
+       "Account Status                      object\n",
+       "Upgraded Account Created Date       object\n",
+       "Upgraded Account Cancelled Date     object\n",
+       "Total Charges                      float64\n",
+       "year_Upgraded                       object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "'''\n",
     "ADDING SLICES FOR THE ANALYSIS\n",
     "'''\n",
@@ -632,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +671,7 @@
        "Name: Total Charges, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
